tests/paczka1/small_fuzzy/83596146.err
Error in line 3: oEpIf2DZP S576 0,8
Error in line 2: B2M S576 57,9
Error in line 15: B2M S147 64,10
